# simulador_cs_back

./: .gitignore  .vercelignore  INSTRUCCIONES_MIGRACION.md  LIMITES_EN_FORMULARIO.md  NUEVAS_FORMULAS_COBERTURA.md  NUEVA_FORMULA_AHORROS.md  README.md  README_DEPLOY.md  RESTRICCIONES_FACTURA.md  SISTEMA_PRECIOS_ESCALONADOS.md  build.py  check_db.py  check_project_data.py  data_backup.json  datos_final.json  env.example  fix_exchange_rate.py  initial_setup.py  manage.py  pyproject.toml  requirements-backup.txt  requirements.txt  reset_migrations.py  start_backend.bat  update_exchange_rate.py  vercel.json  verify_exchange_rate.py
api/: index.py
authentication/: admin.py  email.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_alter_sitesettings_site_name.py
media/: .gitkeep
projects/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_solarproject_financial_access_password.py  0003_alter_solarproject_financial_access_password.py  0004_auto_20250814_1438.py  0005_solarproject_commercial_whatsapp.py  0006_auto_20250814_1531.py  0007_auto_20250814_1610.py
simulations/: admin.py  apps.py  models.py  serializers.py  simulation_engine.py  urls.py  views.py
simulations/migrations/: 0001_initial_new_structure.py  0002_reset_data.py  0005_merge_20250826_1453.py  (+3 more)
static/: .gitkeep
staticfiles/: .gitkeep
wesolar/: asgi.py  settings.py  urls.py  wsgi.py
(+5 files in other folders)
